--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,8 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.+'
+
 
 }
